--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 红鸟网络Android开发团队
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+description: 
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
