--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 
-description: 红鸟网络Android团队Blog
+title: 红鸟网络Android团队Blog
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
